5332 cleanup gcc warning for cmd/fdformat Reviewed by: Gary Mills <gary_mills@fastmail.fm> Reviewed by: Keith Wesolowski <keith.wesolowski@joyent.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>